--- a/deptoEstandar.html
+++ b/deptoEstandar.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Miramar de Ansenuza – Cabañas</title>
+  <title>Miramar de Ansenuza – Deptos Superiores</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
   <!-- Favicon -->
@@ -22,8 +22,8 @@
   <!-- Template CSS -->
   <link href="css/style.css" rel="stylesheet" />
 
-  <!-- ====== ESTILOS PROPIOS ====== -->
-  <style>
+  <!-- ====== ESTILOS PROPIOS (clonado del estilo de “campings”) ====== -->
+ <style>
     :root{
       --azul:#0d2b57;         /* texto y amenities */
       --rosa:#e05c74;         /* links “Ver en Google Maps” */
@@ -175,21 +175,21 @@
   </div>
 
   <!-- Header -->
-  <header class="page-header-ansenuza" style="background-image:url('img/flamencos.jpg'); background-position:center; background-size:cover;">
+<header class="page-header-ansenuza" style="background-image:url('img/flamencos.jpg'); background-position:center; background-size:cover;">
   <div class="container">
     <div class="hero-wrap d-flex flex-column align-items-center justify-content-center">
       <span class="hero-kicker">Alojamientos</span>
       
-      <!-- Título específico para Cabañas -->
-      <h1 class="hero-title"><span class="hero-accent">Cabañas</span></h1>
+      <!-- Título específico -->
+      <h1 class="hero-title"><span class="hero-accent">Deptos Estándares</span></h1>
 
       <!-- Subtítulo más descriptivo -->
-      <p class="hero-subtitle">Tu espacio de descanso en contacto con la naturaleza</p>
+      <p class="hero-subtitle">La opción ideal para descansar con comodidad y buen precio</p>
 
       <nav aria-label="breadcrumb" class="hero-breadcrumb">
         <ol class="breadcrumb justify-content-center">
           <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Cabañas</li>
+          <li class="breadcrumb-item active" aria-current="page">Deptos Estándares</li>
         </ol>
       </nav>
     </div>
@@ -197,20 +197,21 @@
 </header>
 
 
-  <!-- ===== LISTADO: CABAÑAS ===== -->
-  <section id="cabanas" class="container py-5">
 
-    <!-- 1) CATEGORÍAS EN CAJA BLANCA -->
-    <div class="container-fluid booking mt-5">
+  <!-- ===== LISTADO ===== -->
+  <section class="container py-5">
+
+    <!-- CATEGORÍAS -->
+    <div class="container-fluid booking">
       <div class="container">
         <div class="filters-box">
           <div class="row text-center">
-            <div class="col-md-2"><div class="mb-2"><a href="todos.html" class="nav-item nav-link active">Todos</a></div></div>
-            <div class="col-md-2"><div class="mb-2"><a href="cabañas.html" class="nav-item nav-link active">Cabañas</a></div></div>
-            <div class="col-md-2"><div class="mb-2"><a href="campings.html" class="nav-item nav-link active">Campings</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="todos.html" class="nav-item nav-link">Todos</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="cabañas.html" class="nav-item nav-link">Cabañas</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="campings.html" class="nav-item nav-link">Campings</a></div></div>
             <div class="col-md-2">
               <div class="mb-2" style="position:relative;">
-                <a href="departamentos.html" class="nav-item nav-link active"
+                <a href="departamentos.html" class="nav-item nav-link"
                    onmouseover="this.nextElementSibling.style.display='block';"
                    onmouseout="setTimeout(()=>{ if(!this.nextElementSibling.matches(':hover')) this.nextElementSibling.style.display='none'; },120);">
                   Departamentos
@@ -218,153 +219,116 @@
                 <div style="display:none; position:absolute; top:100%; left:50%; transform:translateX(-50%);
                             min-width:260px; background:#fff; border:1px solid #e6e6e6; border-radius:12px;
                             box-shadow:0 10px 24px rgba(0,0,0,.12); padding:.5rem 0; z-index:10;"
-                     onmouseover="this.style.display='block';"
-                     onmouseleave="this.style.display='none';">
+                     onmouseover="this.style.display='block';" onmouseleave="this.style.display='none';">
                   <a href="deptoSuperior.html" class="dropdown-item">Premium / Superior</a>
                   <a href="deptoEstandar.html" class="dropdown-item">Confort / Estándar Plus</a>
                 </div>
               </div>
             </div>
-            <div class="col-md-2"><div class="mb-2"><a href="hoteles.html" class="nav-item nav-link active">Hoteles</a></div></div>
+            <div class="col-md-2"><div class="mb-2"><a href="hoteles.html" class="nav-item nav-link">Hoteles</a></div></div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- 2) BUSCADOR FUERA DEL RECUADRO (DESPEGADO) -->
+    <!-- BUSCADOR -->
     <div class="container search-standalone">
       <div class="search-card">
         <div class="search-wrap">
           <i class="fas fa-search" aria-hidden="true"></i>
           <input id="search-cabanas" class="search-input" type="search"
-                 placeholder="Buscar por nombre de Cabaña"
-                 aria-label="Buscar por nombre de Cabaña">
+                 placeholder="Buscar por nombre de Depto Estandar"
+                 aria-label="Buscar por nombre de Depto Estandar">
           <button id="clear-search" class="btn-clear" type="button" aria-label="Limpiar búsqueda">Limpiar</button>
-          <span id="search-meta" class="search-meta ml-auto">Mostrando <strong id="count-visible">0</strong> de <strong id="count-total">0</strong></span>
+          <span id="search-meta" class="search-meta ml-auto">
+            Mostrando <strong id="count-visible">0</strong> de <strong id="count-total">0</strong>
+          </span>
         </div>
       </div>
     </div>
 
     <!-- MENSAJE: sin resultados -->
-    <div id="no-results" class="no-results">No se encontraron cabañas que coincidan con la búsqueda.</div>
+    <div id="no-results" class="no-results">No se encontraron Departamentos Superiores que coincidan con la búsqueda.</div>
 
-    <!-- ITEM: Alas del Sol -->
-    <article class="lodging row no-gutters mb-5" data-name="Alas del Sol">
-      <div class="col-lg-7">
-        <a class="lodging-photo" href="#" aria-label="Ver galería de Alas del Sol">
-          <img src="img/1541597884_alas-del-sol.jpg.webp" class="img-fluid" alt="Cabañas Alas del Sol">
-        </a>
-      </div>
-      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
-        <h3 class="lodging-title mb-2 js-title">Alas del Sol</h3>
-        <ul class="amenities mb-3">
-          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
-          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
-          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
-          <li title="TV"><i class="fas fa-tv"></i></li>
-          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
-          <li title="Parrilla / Asador"><i class="fas fa-fire"></i></li>
-          <li title="No se admiten mascotas" class="muted"><i class="fas fa-paw"></i></li>
-        </ul>
+    <!-- ====== ITEMS (mismo layout que campings) ====== -->
+    <div class="container mt-4">
 
-        <div class="mb-3">
-          <h6 class="mb-1">Dirección:</h6>
-          <p class="mb-0">
-            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
-            Patricias Argentinas 392
-            <a class="ml-1 small link-map" target="_blank"
-               href="https://www.google.com/maps?q=Patricias+Argentinas+392,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
-          </p>
+      <!-- El Mistolar -->
+      <article class="lodging row no-gutters" data-name="Lo de Nina">
+        <div class="col-md-5">
+          <a class="lodging-photo" href="#" aria-label="Lo de Nina">
+            <img src="img/WhatsApp-Image-2024-02-01-at-14.22.22.jpeg.webp" alt="Lo de Nina - Foto principal">
+          </a>
         </div>
+        <div class="col-md-7 p-4">
+          <h3 class="lodging-title js-title">Lo de Nina</h3>
 
-        <div>
-          <h6 class="mb-2">Consultas y Reservas:</h6>
-          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> 3563-414257</p>
-          <p class="mb-1">
-            <i class="fas fa-envelope text-primary mr-2"></i>
-            <a href="mailto:alasdelsol@hotmail.com.ar">alasdelsol@hotmail.com.ar</a>
-          </p>
-          <p class="mb-0">
-            <i class="fas fa-globe text-primary mr-2"></i>
-            <a href="http://www.alasdelsol.com.ar/" target="_blank" rel="noopener">www.alasdelsol.com.ar</a>
-          </p>
+          <ul class="amenities" aria-label="Servicios">
+            <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+            <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+            <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+            <li class="muted" title="No se admiten mascotas"><i class="fas fa-paw"></i></li>
+          </ul>
+
+          <div class="lbl">Dirección:</div>
+          <div class="addr">
+            <i class="fas fa-map-marker-alt"></i> Santiago Del Estero 140
+            <a class="map-link" target="_blank" rel="noopener"
+               href="https://www.google.com/maps/place/Santiago+del+Estero,+X5143+Miramar+de+Ansenuza,+C%C3%B3rdoba/@-30.9187793,-62.6766733,18.5z/data=!4m6!3m5!1s0x94349ad074a7a9c9:0xde6e121f0da46774!8m2!3d-30.9185358!4d-62.6749185!16s%2Fg%2F11byl864p7?hl=es&entry=ttu"> (Ver en Google Maps)</a>
+          </div>
         </div>
-      </div>
-    </article>
+      </article>
 
-    <!-- ITEM: Costa Marina -->
-    <article class="lodging row no-gutters mb-5" data-name="Costa Marina">
-      <div class="col-lg-7">
-        <a class="lodging-photo" href="#" aria-label="Ver galería de Costa Marina">
-          <img src="img/WhatsApp-Image-2024-11-20-at-13.35.02.jpeg.webp" class="img-fluid" alt="Cabañas Costa Marina">
-        </a>
-      </div>
-      <div class="col-lg-5 bg-white p-4 p-md-4 shadow-sm">
-        <h3 class="lodging-title mb-2 js-title">Costa Marina</h3>
-        <ul class="amenities mb-3">
-          <li title="Estacionamiento"><i class="fas fa-car"></i></li>
-          <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
-          <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
-          <li title="TV"><i class="fas fa-tv"></i></li>
-          <li title="Piscina"><i class="fas fa-swimming-pool"></i></li>
-          <li title="No se admiten mascotas"><i class="fas fa-paw" style="color:#1e3a6d;"></i></li>
-          <li title="Asador / Parrilla"><i class="fas fa-fire"></i></li>
-        </ul>
-
-        <div class="mb-3">
-          <h6 class="mb-1">Dirección:</h6>
-          <p class="mb-0">
-            <i class="fas fa-map-marker-alt text-primary mr-2"></i>
-            Ruta Provincial N°3
-            <a class="ml-1 small link-map" target="_blank"
-               href="https://www.google.com/maps?q=Ruta+Provincial+3,+Miramar+de+Ansenuza">(Ver en Google Maps)</a>
-          </p>
+      <!-- La Aldea -->
+      <article class="lodging row no-gutters" data-name="Gina">
+        <div class="col-md-5">
+          <a class="lodging-photo" href="#" aria-label="Gina">
+            <img src="img/WhatsApp-Image-2023-12-13-at-17.31.43.jpeg.webp" alt="Gina - Foto principal">
+          </a>
         </div>
+        <div class="col-md-7 p-4">
+          <h3 class="lodging-title js-title">Gina</h3>
 
-        <div>
-          <h6 class="mb-2">Consultas y Reservas:</h6>
-          <p class="mb-1"><i class="fas fa-phone-alt text-primary mr-2"></i> (03563) 15410005</p>
-          <p class="mb-1">
-            <i class="fas fa-envelope text-primary mr-2"></i>
-            <a href="mailto:cabanaslaquinta@outlook.com.ar">cabanaslaquinta@outlook.com.ar</a>
-          </p>
-          <p class="mb-0">
-            <i class="fab fa-facebook text-primary mr-2"></i>
-            <a href="https://www.facebook.com/cabanaslaquintamiramar/" target="_blank" rel="noopener">/cabanaslaquintamiramar</a>
-          </p>
+          <ul class="amenities" aria-label="Servicios">
+            <li title="Estacionamiento"><i class="fas fa-car"></i></li>
+            <li title="Aire acondicionado"><i class="far fa-snowflake"></i></li>
+            <li title="Wi-Fi"><i class="fas fa-wifi"></i></li>
+            <li title="TV"><i class="fas fa-tv"></i></li>
+            <li class="muted" title="No se admiten mascotas"><i class="fas fa-paw"></i></li>
+          </ul>
+
+          <div class="lbl">Dirección:</div>
+          <div class="addr">
+            <i class="fas fa-map-marker-alt"></i> Independencia 168
+            <a class="map-link" target="_blank" rel="noopener"
+               href="https://www.google.com.ar/maps/place/Departamentos+Gina/@-30.9206333,-62.6736883,178m/data=!3m1!1e3!4m15!1m8!3m7!1s0x95bb7f3e90ecbb3f:0xa7a86a79e382c9a2!2sEl+Remanso,+B2812+Exaltaci%C3%B3n+de+la+Cruz,+Provincia+de+Buenos+Aires!3b1!8m2!3d-34.3910347!4d-59.0762892!16s%2Fg%2F1234zqnc!3m5!1s0x94349b005cba387f:0xc3bbb4ea0c18374!8m2!3d-30.9208929!4d-62.6734286!16s%2Fg%2F11l_48t__4?hl=es&entry=ttu"> (Ver en Google Maps)</a>
+          </div>
         </div>
-      </div>
-    </article>
+      </article>
 
+    </div>
   </section>
 
-  <!-- PAGINACIÓN -->
+  <!-- PAGINACIÓN (si la usás) -->
   <div class="pagination-wrapper" id="pagination"></div>
 
   <!-- Footer -->
-  <!-- ========== FOOTER ========== -->
-<footer>
   <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
     <div class="row pt-4">
-      <!-- Logo + Descripción -->
       <div class="col-lg-4 col-md-6 mb-4">
         <a href="index.html" class="navbar-brand d-inline-flex align-items-center mb-2">
-          <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza">
+          <img src="img/logo-miramar@2x.png" alt="Miramar de Ansenuza" style="height:34px;width:auto;">
         </a>
-        <p class="mt-2">
-          Miramar de Ansenuza, puerta del Parque y Reserva Nacional Ansenuza.  
-          Atardeceres únicos, avistaje de aves y la laguna salada más grande de Sudamérica.
-        </p>
-        <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 4px;">SEGUINOS</h6>
+        <p class="mt-2">Miramar de Ansenuza, puerta del Parque y Reserva Nacional Ansenuza. Atardeceres únicos, avistaje de aves y la laguna salada más grande de Sudamérica.</p>
+        <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 4px;">Seguinos</h6>
         <div class="d-flex">
           <a class="btn btn-outline-primary btn-square mr-2" href="https://www.facebook.com/turismomiramardeansenuza/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
           <a class="btn btn-outline-primary btn-square" href="https://www.instagram.com/miramardeansenuza/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
 
-      <!-- Navegación -->
       <div class="col-lg-4 col-md-6 mb-4">
-        <h5 class="text-white text-uppercase mb-4">NAVEGACIÓN</h5>
+        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Navegación</h5>
         <div class="d-flex flex-column">
           <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
           <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
@@ -374,9 +338,8 @@
         </div>
       </div>
 
-      <!-- Contacto -->
       <div class="col-lg-4 col-md-6 mb-4">
-        <h5 class="text-white text-uppercase mb-4">CONTACTO</h5>
+        <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 4px;">Contacto</h5>
         <p><i class="fa fa-map-marker-alt mr-2"></i>DIRECCIÓN OFICINA DE TURISMO (General Paz 465, Miramar Córdoba.)</p>
         <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
         <p><i class="fa fa-envelope mr-2"></i> oficinadeturismo2@gmail.com <br> infomiramarcba@gmail.com </p>
@@ -390,7 +353,6 @@
     </div>
   </div>
 
-  <!-- Barra inferior -->
   <div class="container-fluid bg-dark text-white border-top py-3 px-sm-3 px-md-5" style="border-color: rgba(255,255,255,.08) !important;">
     <div class="row">
       <div class="col-md-6 text-center text-md-left mb-2 mb-md-0">
@@ -401,89 +363,11 @@
       </div>
     </div>
   </div>
-</footer>
-
-<!-- ===== CSS FOOTER ===== -->
-<style>
-/* ===== FOOTER ===== */
-footer, .container-fluid.bg-dark {
-  background-color: #1c1c1c !important;
-  color: #ccc;
-  font-size: 0.95rem;
-  line-height: 1.6;
-}
-
-footer p, 
-footer a, 
-.container-fluid.bg-dark p, 
-.container-fluid.bg-dark a {
-  color: #bbb;
-}
-
-footer a:hover,
-.container-fluid.bg-dark a:hover {
-  color: #6bb8ff;
-  text-decoration: none;
-}
-
-footer h5, 
-footer h6,
-.container-fluid.bg-dark h5,
-.container-fluid.bg-dark h6 {
-  color: #fff;
-  font-weight: 600;
-  margin-bottom: 1rem;
-  letter-spacing: 2px;
-}
-
-footer .navbar-brand img {
-  height: 40px;
-  width: auto;
-}
-
-footer .btn-square {
-  width: 36px;
-  height: 36px;
-  border-radius: 4px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff !important;
-  border: 1px solid #6bb8ff;
-  transition: all 0.3s ease;
-}
-
-footer .btn-square:hover {
-  background: #6bb8ff;
-  color: #fff !important;
-}
-
-footer .btn-success {
-  background-color: #25d366 !important;
-  border: none;
-  font-weight: 600;
-  transition: transform 0.2s ease;
-}
-
-footer .btn-success:hover {
-  transform: scale(1.05);
-}
-
-footer small {
-  font-size: 0.85rem;
-  color: #888 !important;
-}
-
-/* línea divisoria inferior */
-footer .border-top {
-  border-color: rgba(255, 255, 255, .12) !important;
-}
-</style>
 
   <!-- Back to Top -->
   <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-  <!-- JavaScript Libraries -->
+  <!-- JS libs -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
   <script src="lib/easing/easing.min.js"></script>
@@ -494,7 +378,7 @@ footer .border-top {
   <script src="mail/jqBootstrapValidation.min.js"></script>
   <script src="mail/contact.js"></script>
 
-  <!-- ====== BUSCADOR (filtrado por nombre) ====== -->
+  <!-- ====== BUSCADOR / CONTADOR ====== -->
   <script>
     (function(){
       const $input  = document.getElementById('search-cabanas');
@@ -515,12 +399,12 @@ footer .border-top {
 
       function highlight(titleEl, q){
         if(!q) return;
-        const txt = titleEl.textContent;
-        const idx = norm(txt).indexOf(norm(q));
-        if(idx === -1) return;
-        const start = txt.slice(0, idx);
-        const mid   = txt.slice(idx, idx + q.length);
-        const end   = txt.slice(idx + q.length);
+        const raw = titleEl.textContent;
+        const ix  = norm(raw).indexOf(norm(q));
+        if(ix === -1) return;
+        const start = raw.slice(0, ix);
+        const mid   = raw.slice(ix, ix + q.length);
+        const end   = raw.slice(ix + q.length);
         titleEl.innerHTML = `${start}<mark class="search-hit">${mid}</mark>${end}`;
       }
 
@@ -548,6 +432,10 @@ footer .border-top {
 
       $input.addEventListener('input', debouncedFilter);
       $clear.addEventListener('click', () => { $input.value = ''; $input.focus(); applyFilter(); });
+
+      // Año automático en el footer
+      const yEl = document.getElementById('year');
+      if (yEl) yEl.textContent = new Date().getFullYear();
 
       applyFilter();
     })();
