--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="d-inline-flex align-items-center">
                         <p><i class="fa fa-envelope mr-2"></i>oficinadeturismo2@gmail.com</p>
                         <p class="text-body px-3">|</p>
-                        <p><i class="fa fa-phone-alt mr-2"></i>3563 - 409731</p>
+                        <p><i class="fa fa-phone-alt mr-2"></i>+54 9 3563 40-1392</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right">
@@ -251,10 +251,11 @@
             </p>
 
             <a class="btn btn-primary"
-               href="https://wa.me/5493563numero de pink?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
-               target="_blank" rel="noopener" aria-label="Consultar por WhatsApp a PINK">
-              Consultar aquí
-            </a>
+            href="https://wa.me/5493563401392?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
+            target="_blank" rel="noopener" aria-label="Consultar por WhatsApp a PINK">
+                          Consultar aquí
+                          </a>
+
           </div>
         </div>
       </div>
@@ -556,7 +557,7 @@
 
 <!-- Botón Pinky -->
 <!-- Botón Pinky -->
-<a href="https://wa.me/5493563409731?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
+<a href="https://wa.me/3563401392?text=Hola%20PINK,%20quisiera%20hacer%20una%20consulta"
    class="pinky-float" target="_blank" 
    aria-label="Contactar con PINK por WhatsApp"
    title="Hola soy Pink, tu asistente virtual">
