commit alejo ingles01

--- a/about.html
+++ b/about.html
@@ -165,6 +165,7 @@
             <a href="index.html" class="nav-item nav-link">Inicio</a>
               <a href="about.html" class="nav-item nav-link active">Acerca de</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
+            <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
            
           </div>
         </div>
@@ -400,6 +401,7 @@
           <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
           <a class="text-white-50 mb-2" href="package.html"><i class="fa fa-angle-right mr-2"></i>Alojamientos</a>
           <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contacto</a>
+          <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
         </div>
       </div>
 
