--- a/gastronomia.html
+++ b/gastronomia.html
@@ -127,6 +127,7 @@
             <a href="about.html" class="nav-item nav-link">Acerca de</a>
             <a href="gastronomia.html" class="nav-item nav-link active">Gastronomía</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
+            <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
           </div>
         </div>
       </nav>
