--- a/historia.html
+++ b/historia.html
@@ -171,6 +171,7 @@
             <a href="about.html" class="nav-item nav-link">Acerca de</a>
               <a href="historia.html" class="nav-item nav-link active">Historia</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
+            <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
            
           </div>
         </div>
@@ -292,6 +293,7 @@
                 <div class="timeline-tags">
                   <span class="chip"><i class="fas fa-water"></i> Creciente</span>
                   <span class="chip"><i class="fas fa-hands-helping"></i> Comunidad</span>
+
                 </div>
               </div>
             </article>
