--- a/hoteles.html
+++ b/hoteles.html
@@ -221,6 +221,7 @@
             <a href="service.html" class="nav-item nav-link">Acerca de</a>
             <a href="package.html" class="nav-item nav-link active">Alojamientos</a>
             <a href="contact.html" class="nav-item nav-link">Contacto</a>
+            <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
           </div>
         </div>
       </nav>
