--- a/historia.html
+++ b/historia.html
@@ -170,7 +170,7 @@
             <a href="index.html" class="nav-item nav-link">Inicio</a>
             <a href="about.html" class="nav-item nav-link">Acerca de</a>
               <a href="historia.html" class="nav-item nav-link active">Historia</a>
-            <a href="contact.html" class="nav-item nav-link">Contacto</a>
+           
             <a href="pruebaalejo.html" class="nav-item nav-link">Recibir información</a>
            
           </div>
@@ -301,13 +301,16 @@
               <!-- Carrusel 2022 -->
               <div id="tl-2022" class="owl-carousel">
                 <div class="item">
-                  <img class="timeline-media owl-lazy" data-src="img/OTRG2SSJZJD73F7TTMBMOGBJIM.webp" alt="Parque Nacional Ansenuza" width="1200" height="800" />
+                  <img class="timeline-media owl-lazy" data-src="img/_JOP9956.jpg" alt="Parque Nacional Ansenuza" width="1200" height="800" />
                 </div>
                 <div class="item">
-                  <img class="timeline-media owl-lazy" data-src="img/HUGUI-15-scaled.jpg" alt="Humedales y aves de Ansenuza" width="1200" height="800" />
+                  <img class="timeline-media owl-lazy" data-src="img/IMG_3048.jpg" alt="Humedales y aves de Ansenuza" width="1200" height="800" />
                 </div>
                 <div class="item">
                   <img class="timeline-media owl-lazy" data-src="img/Y1A1018aves_0-480x320.jpg" alt="Avistaje de aves en Miramar" width="1200" height="800" />
+                </div>
+                <div class="item">
+                  <img class="timeline-media owl-lazy" data-src="img/62515513_1781407222005389_6009509684988346368_n.jpg" alt="Avistaje de aves en Miramar" width="1200" height="800" />
                 </div>
               </div>
               <div class="timeline-body">
@@ -331,7 +334,7 @@
               <!-- Carrusel Hoy -->
               <div id="tl-hoy" class="owl-carousel">
                 <div class="item">
-                  <img class="timeline-media owl-lazy" data-src="img/WhatsApp-Image-2024-11-20-at-13.35.02.jpeg.webp" alt="Paseo actual en Miramar" width="1200" height="800" />
+                  <img class="timeline-media owl-lazy" data-src="img/DSCN0794.jpg" alt="Paseo actual en Miramar" width="1200" height="800" />
                 </div>
                 <div class="item">
                   <img class="timeline-media owl-lazy" data-src="img/miramar01_1582308818.jpg" alt="Costanera de Miramar" width="1200" height="800" />
